--- a/site/static/examples/in-place-restart/Dockerfile-big-container
+++ b/site/static/examples/in-place-restart/Dockerfile-big-container
@@ -1,3 +1,5 @@
+# This is only for the big container mode of the in-place restart agent
+# See examples/in-place-restart/jobset-big-container-mode.yaml
 ARG BUILDER_IMAGE=golang:1.25
 ARG BASE_IMAGE=debian:12
 
